[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arbok_driver"
authors = [
    {name = "Andreas Nickl", email = "a.nickl@unsw.edu.au"},
]
description = "QCoDeS compatible driver for the OPX+ from Quantum Machines"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anytree>=2.13",
    "jupyterlab",
    "numpy >= 1.23",
    "matplotlib",
    "minio ~= 7.2",
    "ipython",
    "psycopg2-binary ~= 2.9",
    "s3fs~=2025.10",
    "scipy", 
    "SQLAlchemy ~= 2.0",
    
    "qm-qua >= 1.2.1",
    "qcodes >= 0.53",
    "qualang_tools >= 0.19",
    "qcodes-contrib-drivers >= 0.23",
    "rich >= 14.0",
   
    "zarr ~= 2.18"
]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.optional-dependencies]
docs = [
  "myst-nb",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints"
]
