[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arbok_driver"
authors = [
    {name = "Andreas Nickl", email = "a.nickl@unsw.edu.au"},
]
description = "QCoDeS compatible driver for the OPX+ from Quantum Machines"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anytree>=2.13",
    "numpy >= 1.23",
    "matplotlib ~= 3.10",
    "minio ~= 7.2",
    "psycopg2-binary ~= 2.9",
    "s3fs~=2025.10",
    "scipy ~= 1.17",
    "SQLAlchemy ~= 2.0",
    "qm-qua ~= 1.2.5",
    "qcodes ~= 0.54",
    "qualang_tools ~= 0.21",
    "qcodes-contrib-drivers ~= 0.24",
    "rich ~= 14.0",
    "zarr ~= 2.18",
    "jupyterlab>=4.5.4",
]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.optional-dependencies]
docs = [
  "myst-nb",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints"
]

dev = [
  "pytest~=9.0",
  "pytest-cov~=7.0"
]

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
    "ignore:Passing field metadata as keyword arguments is deprecated:marshmallow.warnings.RemovedInMarshmallow4Warning",
]
