[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "arbok_driver"
authors = [
    {name = "Andreas Nickl", email = "a.nickl@unsw.edu.au"},
]
description = "QCoDeS compatible driver for the OPX+ from Quantum Machines"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anytree>=2.13",
    "numpy ~= 2.5",
    "matplotlib ~= 3.10",
    "minio ~= 7.2",
    "psycopg2-binary ~= 2.9",
    "s3fs~=2025.10",
    "scipy ~= 1.17", 
    "SQLAlchemy ~= 2.0",
    "qm-qua == 1.3.1",
    "qcodes ~= 0.58",
    "qualang_tools ~= 0.22",
    "qcodes-contrib-drivers ~= 0.25",
    "rich ~= 14.0",
    "zarr ~= 2.18"
]
dynamic = ["version"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.optional-dependencies]
dev = [
  "myst-nb",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-autodoc-typehints",
  "pytest~=9.0",
  "pytest-cov~=7.0",
  "jupyterlab>=4.5.6"
]

[project.urls]
Homepage = "https://github.com/andncl/arbok_driver/"
Documentation = "https://arbok-driver.readthedocs.io/en/latest/"
Repository = "https://github.com/your-org/arbok_driver"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
    "ignore:Passing field metadata as keyword arguments is deprecated:marshmallow.warnings.RemovedInMarshmallow4Warning",
]
